# Findexer

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  args.txt  findexer.drawio
lib/: TutorialConfig.h
libs/: File_Dir.cpp  File_Dir.hpp  FlDr.hpp
rust/: Cargo.toml
rust/src/: dir_search.rs  main.rs
src/: main.cpp  main.rs
